--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ jobs:
 
     # Build a dockerfile
     - stage: docker build
+      sudo: true
       services:
         - docker
       before_script:
